--- a/macros.tex
+++ b/macros.tex
@@ -81,3 +81,4 @@
 \newcommand{\mutable}[2]{#1 \ent \mathsf{mutable}(#2)}
 \newcommand{\writee}{\mathsf{write}}
 \newcommand{\readd}{\mathsf{read}}
+\newcommand{\copye}[1]{\texttt{copy} \ #1}
