--- a/macros.tex
+++ b/macros.tex
@@ -1,3 +1,4 @@
+\DeclareMathOperator{\dom}{dom}
 
 \newcommand{\code}[1]{\textcolor{purple}{\textnormal{\texttt{#1}}}}
 
@@ -45,7 +46,7 @@
 \newcommand{\etyj}[3]{#1 \vdash #2 : #3}
 \newcommand{\styj}[3]{#1 \vdash #2 \dashv #3}
 
-\newcommand{\evj}[3]{\langle \ #1 \ , \ #2 \ \rangle \Downarrow #3}
+\newcommand{\evj}[3]{#1 \vdash #2 \Downarrow #3}
 \newcommand{\evjss}[4]{\langle \ #1 \ , \ #2 \ \rangle \longrightarrow \langle \ #3 \ , \ #4 \ \rangle}
 \newcommand{\evjssm}[4]{\langle \ #1 \ , \ #2 \ \rangle \longrightarrow^\star \langle \ #3 \ , \ #4 \ \rangle}
 
